<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="176dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center"

        android:padding="16dp"
        android:text="@string/nombre"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/apellido"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/correo_electr_nico"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <TextView
        android:id="@+id/textViewEmail3"
        android:layout_width="188dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="#00B8D4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail2"
        app:layout_constraintVertical_bias="0.462" />

    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/contrase_a"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/by_jonny_java"
        android:textAlignment="gravity"
        android:textColorLink="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="377dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
